snapshots/edgehog_device_runtime__file_transfer__interface__status__tests__serialize_progress_1.snap
---
source: src/file_transfer/interface/status.rs
expression: data
---
AstarteObject {
    inner: [
        (
            "id",
            String(
                "00000000-0000-0000-0000-000000000128",
            ),
        ),
        (
            "type",
            String(
                "device_to_server",
            ),
        ),
        (
            "bytes",
            LongInteger(
                1024,
            ),
        ),
        (
            "totalBytes",
            LongInteger(
                4096,
            ),
        ),
    ],
}
