snapshots/edgehog_device_runtime__file_transfer__interface__status__tests__serialize_response_0.snap
---
source: src/file_transfer/interface/status.rs
expression: data
---
AstarteObject {
    inner: [
        (
            "id",
            String(
                "3473aac8-42d8-4e4a-942f-609df942d6b4",
            ),
        ),
        (
            "type",
            String(
                "server_to_device",
            ),
        ),
        (
            "code",
            Integer(
                0,
            ),
        ),
        (
            "message",
            String(
                "",
            ),
        ),
    ],
}
